@@ -511,6 +511,13 @@
          <menuitem name="skip-backwards" action="skip-backwards"/>
          <menuitem name="show-controls" action="show-controls"/>
          <menuitem name="fullscreen" action="fullscreen"/>
+         <separator/>
+         <menu name="popup-languages" action="languages-menu">
+            <placeholder name="placeholder"/>
+         </menu>
+         <menu name="popup-subtitles" action="subtitles-menu">
+            <placeholder name="placeholder"/>
+         </menu>
       </popup>
    </ui>
 </object>
