@@ -1,3 +1,11 @@
+2008-09-21  Bastien Nocera  <hadess@hadess.net>
+
+	* data/totem.ui:
+	* src/totem-menu.c (add_lang_action), (create_lang_actions),
+	(totem_languages_update), (totem_subtitles_update): Add the
+	subtitle and languages menus to the fullscreen popup as well
+	(Closes: #164036)
+
 2008-09-20  Philip Withnall  <philip@tecnocode.co.uk>
 
 	* src/plugins/tracker/totem-tracker-widget.c (get_search_count):
